--- a/projects/mc/rawcontent/phaedrussay.tex
+++ b/projects/mc/rawcontent/phaedrussay.tex
@@ -1905,7 +1905,7 @@ think you could have spoken of it as you did a few minutes ago, first
 saying that it is harmful both to lover and beloved and then immediately
 afterward that it is the greatest good?
 
-\saysocrates Very well put. But now tell me this---I can’t remember
+\saysocrates Very\inouter{d} well put. But now tell me this---I can’t remember
 at all because I was completely possessed by the gods: Did I define love
 at the beginning of my speech?
 
@@ -1914,7 +1914,7 @@ at the beginning of my speech?
 \saysocrates Alas, how much more artful with speeches the Nymphs, daughters
 of Achelous, and Pan, son of Hermes, are, according to what you say,
 than Lysias, son of Cephalus! Or am I wrong? Did Lysias too, at 
-the start of his love-speech, compel us to assume that love is the
+the start of his love-speech, compel\inouter{e} us to assume that love is the
 single thing that he himself wanted it to be? Did he then complete his
 speech by arranging everything in relation to that? Will you read its
 opening once again?
@@ -1926,7 +1926,7 @@ opening once again?
 \sayphaedrus “You understand my situation: I’ve told you how good it would
 be for us, in my opinion, if we could work this out. In any case, I
 don’t think I should lose the chance to get what I am asking for, merely
-because I don’t happen to be in love with you. A man in
+because I don’t happen to be\inouter{264} in love with you. A man in
 love will wish he had not done you any favors, once his desire dies
 down---”
 
@@ -1936,7 +1936,7 @@ speech swim upstream on its back. His first words are what a lover would
 say to his boy as he was concluding his speech. Am I wrong, Phaedrus,
 dear heart?
 
-\sayphaedrus Well, Socrates, that was the end for which he gave the speech!
+\sayphaedrus Well\inouter{b}, Socrates, that was the end for which he gave the speech!
 
 \saysocrates And what about the rest? Don’t the parts of the speech appear
 to have been thrown together at random? Is it evident that the second
@@ -1947,7 +1947,7 @@ though not without a certain noble willfulness. But you, do you know any
 principle of speech-composition compelling him to place these things one
 after another in this order?
 
-\sayphaedrus It’s very generous of you to think that I can understand his reasons so clearly.
+\sayphaedrus It’s\inouter{c} very generous of you to think that I can understand his reasons so clearly.
 
 \saysocrates But surely you will admit at least this much: Every speech
 must be put together like a living creature, with a body of its own; it
@@ -1961,21 +1961,18 @@ work.
 otherwise? Actually, you’ll find that it’s just like the epigram people
 say is inscribed on the tomb of Midas the Phrygian.
 
-\sayphaedrus What epigram is that? And what’s the matter with it?
+\sayphaedrus What\inouter{d} epigram is that? And what’s the matter with it?
 
-\saysocrates It goes like this:\crlf
-\crlf
+\saysocrates It goes like this:
 
-{\em A maid of bronze am I, on Midas’ tomb I lie}
+\startpoem
+{\em A maid of bronze am I, on Midas’ tomb I lie
+As long as water flows, and trees grow tall
+Shielding the grave where many come to cry
+That Midas rests here I say to one and all.}
+\stoppoem
 
-{\em As long as water flows, and trees grow tall}
-
-{\em Shielding the grave where many come to cry}
-
-{\em That Midas rests here I say to one and all.}\crlf
-\crlf
-
-I’m sure you notice that it makes no difference at all which of its
+I’m\inouter{e} sure you notice that it makes no difference at all which of its
 verses comes first, and which last.
 
 \sayphaedrus You are making fun of our speech, Socrates.
@@ -1986,7 +1983,7 @@ provided one tries to emulate them as little as possible---and turn to
 the others. I think it is important for students of speechmaking to pay
 attention to one of their features.
 
-\sayphaedrus What do you mean?
+\sayphaedrus What\inouter{265} do you mean?
 
 \saysocrates They were in a way opposite to one another. One claimed that
 one should give one’s favors to the lover; the other, to the non-lover.
@@ -2003,7 +2000,7 @@ we, that love is a kind of madness?
 illness, the other by a divinely inspired release from normally accepted
 behavior?
 
-\sayphaedrus Certainly.
+\sayphaedrus Certainly.\inouter{b}
 
 \saysocrates We also distinguished four parts within the divine kind and
 connected them to four gods. Having attributed the inspiration of the
@@ -2012,7 +2009,7 @@ and the fourth part of madness to Aphrodite and to Love, we said that
 the madness of love is the best. We used a certain sort of image to
 describe love’s passion; perhaps it had a measure of truth in it, though
 it may also have led us astray. And having whipped up a not altogether
-implausible speech, we sang playfully, but also appropriately
+implausible speech, we sang playfully, but also appropriately\inouter{c}
 and respectfully, a story-like hymn to my master and yours,
 Phaedrus---to Love, who watches over beautiful boys.
 
@@ -2025,7 +2022,7 @@ speech able to proceed from censure to praise?
 
 \saysocrates Well, everything else in it really does appear to me to have
 been spoken in play. But part of it was given with Fortune’s guidance, 
-and there were in it two kinds of things the nature of which it
+and there were in it two kinds of things\inouter{d} the nature of which it
 would be quite wonderful to grasp by means of a systematic art.
 
 \sayphaedrus Which things?
@@ -2039,10 +2036,10 @@ proceed clearly and consistently with itself.
 
 \sayphaedrus And what is the other thing you are talking about, Socrates?
 
-\saysocrates This, in turn, is to be able to cut up each kind
+\saysocrates This\inouter{e}, in turn, is to be able to cut up each kind
 according to its species along its natural joints, and to try not to
 splinter any part, as a bad butcher might do. In just this way, our two
-speeches placed all mental derangements into one common
+speeches placed all mental derangements into one common\inouter{266}
 kind. Then, just as each single body has parts that naturally come in
 pairs of the same name (one of them being called the right-hand and the
 other the left-hand one), so the speeches, having considered unsoundness
@@ -2052,7 +2049,7 @@ it discovered among these parts a sort of love that can be called
 “left-handed,” which it correctly denounced; the second speech, in turn,
 led us to the right-hand part of madness; discovered a love that shares
 its name with the other but is actually divine; set it out 
-before us, and praised it as the cause of our greatest goods.
+before us, and praised it as the cause of our greatest goods.\inouter{b}
 
 \sayphaedrus You are absolutely right.
 
@@ -2063,7 +2060,7 @@ is also by nature capable of encompassing
 many, I follow
 “straight behind, in his tracks, as if he were a
 god.”\endnote{{\em Odyssey} ii.406.} God knows
-whether this is the right name for those who can do this correctly or
+whether this is the right name for those who can do this correctly\inouter{c} or
 not, but so far I have always called them “dialecticians.” But
 tell me what I must call them now that we have learned all this from
 Lysias and you. Or is it just that art of speaking that Thrasymachus and
@@ -2076,7 +2073,7 @@ knowledge you’re talking about. No, it seems to me that you are right in
 calling the sort of thing you mentioned dialectic; but, it seems to me,
 rhetoric still eludes us.
 
-\saysocrates What are you saying? Could there be anything valuable which 
+\saysocrates What\inouter{d} are you saying? Could there be anything valuable which 
 is independent of the methods I mentioned and is still grasped
 by art? If there is, you and I must certainly honor it, and we must say
 what part of rhetoric it is that has been left out.
@@ -2088,7 +2085,7 @@ written up in the books on the art of speaking.
 the Preamble with which a speech must begin. This is what you mean,
 isn’t it---the fine points of the art?
 
-\sayphaedrus Yes.
+\sayphaedrus Yes.\inouter{e}
 
 \saysocrates Second come the Statement of Facts and the Evidence of
 Witnesses concerning it; third, Indirect Evidence; fourth, Claims to
@@ -2097,7 +2094,7 @@ word-wizard adds Confirmation and Supplementary Confirmation.
 
 \sayphaedrus You mean the worthy Theodorus?
 
-\saysocrates Quite. And he also adds Refutation and Supplementary
+\saysocrates Quite.\inouter{267} And he also adds Refutation and Supplementary
 Refutation, to be used both in prosecution and in
 defense. Nor must we forget the most excellent Evenus of
 Paros,\endnote{Evenus of Paros was active
@@ -2113,7 +2110,7 @@ and Gorgias?
 How can we leave them out when it is they who realized that what is
 likely must be held in higher honor than what is true; they who, by the
 power of their language, make small things appear great and great things
-small; they who express modern ideas in ancient garb, and
+small; they who\inouter{b} express modern ideas in ancient garb, and
 ancient ones in modern dress; they who have discovered how to argue both
 concisely and at infinite length about any subject? Actually, when I
 told Prodicus\endnote{Prodicus of Ceos, who
@@ -2140,7 +2137,7 @@ Polus\endnote{Polus was a pupil of
 Gorgias; Plato represents him in the {\em Gorgias}, esp. at 448c and
 471a--c. He was said to have composed an {\em Art of Rhetoric}
 ({\em Gorgias}, 462b).} set
-up---speaking with Reduplication, Speaking in Maxims, Speaking in
+up---speaking with Reduplication\inouter{c}, Speaking in Maxims, Speaking in
 Images---and of the terms Licymnius gave him as a present to help him
 explain Good Diction?\endnote{Licymnius of Chios was a
 dithyrambic poet and teacher of rhetoric.}
@@ -2158,7 +2155,7 @@ age, the prize, in my judgment, goes to the mighty
 Chalcedonian.\endnote{Literally, “the might of
 the Chalcedonian”: a Homeric figure referring to Thrasymachus, who came
 from Chalcedon. Cf. 261c.} He it is
-also who knows best how to inflame a crowd and, once they are
+also who knows best how to inflame a\inouter{d} crowd and, once they are
 inflamed, how to hush them again with his words’ magic spell, as he says
 himself. And let’s not forget that he is as good at producing slander as
 he is at refuting it, whatever its source may be.
@@ -2174,7 +2171,7 @@ the art of speaking---
 
 \sayphaedrus Only minor points, not worth making.
 
-\saysocrates Well, let’s leave minor points aside. Let’s
+\saysocrates Well\inouter{268}, let’s leave minor points aside. Let’s
 hold what we do have closer to the light so that we can see precisely
 the power of the art these things produce.
 
@@ -2187,7 +2184,7 @@ as I do, that its fabric is a little threadbare?
 
 \saysocrates All right, tell me this. Suppose someone came to your friend
 Eryximachus or his father Acumenus and said: “I know treatments to raise
-or lower (whichever I prefer) the temperature of people’s bodies; if I
+or lower (whichever I prefer) the temperature\inouter{b} of people’s bodies; if I
 decide to, I can make them vomit or make their bowels move, and
 all sorts of things. On the basis of this knowledge, I claim to be a
 physician; and I claim to be able to make others physicians as well by
@@ -2198,7 +2195,7 @@ that?
 whom he should apply such treatments, when, and to what extent.
 
 \saysocrates What if he replied, “I have no idea. My claim is that whoever
-learns from me will manage to do what you ask on his own“?
+learns from me will manage to do what you ask on his own“?\inouter{c}
 
 \sayphaedrus I think they’d say the man’s mad if he thinks he’s a doctor
 just because he read a book or happened to come across a few potions; he
@@ -2207,7 +2204,7 @@ knows nothing of the art.
 \saysocrates And suppose someone approached Sophocles and Euripides and
 claimed to know how to compose the longest passages on trivial topics
 and the briefest ones on topics of great importance, that he could make
-them pitiful if he wanted, or again, by contrast, terrifying and
+them pitiful if he wanted, or again,\inouter{d} by contrast, terrifying and
 menacing, and so on. Suppose further that he believed that by
 teaching this he was imparting the knowledge of composing tragedies---
 
@@ -2217,7 +2214,7 @@ They have to fit with one another and with the whole work.
 
 \saysocrates But I am sure they wouldn’t reproach him rudely. They would
 react more like a musician confronted by a man who thought he had
-mastered harmony because he was able to produce the highest and lowest 
+mastered harmony because he was\inouter{e} able to produce the highest and lowest 
 notes on his strings. The musician would not say fiercely, “You
 stupid man, you are out of your mind!” As befits his calling, he would
 speak more gently: “My friend, though that too is necessary for
@@ -2228,7 +2225,7 @@ itself.”
 
 \sayphaedrus That’s certainly right.
 
-\saysocrates So Sophocles would also tell the man who was showing off 
+\saysocrates So\inouter{269} Sophocles would also tell the man who was showing off 
 to them that he knew the preliminaries of tragedy, but
 not the art of tragedy itself. And Acumenus would say his man knew the
 preliminaries of medicine, but not medicine itself.
@@ -2244,14 +2241,14 @@ legendary warrior hero of Argos, one of the main characters in
 Euripides’ {\em Suppliants}.} were to hear
 of all the marvelous techniques we just discussed---Speaking Concisely
 and Speaking in Images and all the rest we listed and proposed
-to examine under the light? Would he be angry or rude, as you and I
+to examine under the light?\inouter{b} Would he be angry or rude, as you and I
 were, with those who write of those techniques and teach them as if they
 are rhetoric itself, and say something coarse to them? Wouldn’t
 he---being wiser than we are---reproach us as well and say, “Phaedrus
 and Socrates, you should not be angry with these people---you should be
 sorry for them. The reason they cannot define rhetoric is that they are
 ignorant of dialectic. It is their ignorance that makes them think they
-have discovered what rhetoric is when they have mastered only what it is necessary to learn as preliminaries. So they teach these
+have discovered what rhetoric is when they have mastered only what it is necessary to learn as preliminaries.\inouter{c} So they teach these
 preliminaries and imagine their pupils have received a full course in
 rhetoric, thinking the task of using each of them persuasively and
 putting them together into a whole speech is a minor matter, to be
@@ -2259,7 +2256,7 @@ worked out by the pupils from their own resources“?
 
 \sayphaedrus Really, Socrates, the art these men present as rhetoric in
 their courses and handbooks is no more than what you say. In my
-judgment, at least, your point is well taken. But how, from what
+judgment, at least, your point is well taken.\inouter{d} But how, from what
 source, could one acquire the art of the true rhetorician, the really
 persuasive speaker?
 
@@ -2274,12 +2271,12 @@ found in the direction Lysias and Thrasymachus have followed.
 
 \sayphaedrus Where can we find it then?
 
-\saysocrates My dear friend, maybe we can see now why Pericles was
+\saysocrates My\inouter{e} dear friend, maybe we can see now why Pericles was
 in all likelihood the greatest rhetorician of all.
 
 \sayphaedrus How is that?
 
-\saysocrates All the great arts require endless talk and
+\saysocrates All\inouter{270} the great arts require endless talk and
 ethereal speculation about nature: This seems to be what gives them
 their lofty point of view and universal applicability. That’s just what
 Pericles mastered---besides having natural ability. He came across
@@ -2291,7 +2288,7 @@ he drew for the art of rhetoric what was useful to it.
 
 \sayphaedrus What do you mean by that?
 
-\saysocrates Well, isn’t the method of medicine in a way the same
+\saysocrates Well\inouter{b}, isn’t the method of medicine in a way the same
 as the method of rhetoric?
 
 \sayphaedrus How so?
@@ -2306,7 +2303,7 @@ and virtues we want.
 
 \sayphaedrus That is most likely, Socrates.
 
-\saysocrates Do you think, then, that it is possible to reach a serious
+\saysocrates Do\inouter{c} you think, then, that it is possible to reach a serious
 understanding of the nature of the soul without understanding
 the nature of the world as a whole?
 
@@ -2325,7 +2322,7 @@ consider whether argument supports that view.
 \sayphaedrus I agree.
 
 \saysocrates Consider, then, what both Hippocrates and true argument say
-about nature. Isn’t this the way to think systematically about the
+about nature. Isn’t this the way to think\inouter{d} systematically about the
 nature of anything? First, we must consider whether the object
 regarding which we intend to become experts and capable of transmitting
 our expertise is simple or complex. Then, if it is simple, we must
@@ -2338,7 +2335,7 @@ disposition to be acted upon by what.
 
 \sayphaedrus It seems so, Socrates.
 
-\saysocrates Proceeding by any other method would be like walking with 
+\saysocrates Proceeding\inouter{e} by any other method would be like walking with 
 the blind. Conversely, whoever studies anything on the basis of
 an art must never be compared to the blind or the deaf. On the contrary,
 it is clear that someone who teaches another to make speeches as an art
@@ -2347,7 +2344,7 @@ speeches are to be applied. And that, surely, is the soul.
 
 \sayphaedrus Of course.
 
-\saysocrates This is therefore the object toward which the speaker’s whole effort is directed, since it is in the soul that he
+\saysocrates This\inouter{271} is therefore the object toward which the speaker’s whole effort is directed, since it is in the soul that he
 attempts to produce conviction. Isn’t that so?
 
 \sayphaedrus Yes.
@@ -2366,7 +2363,7 @@ and is acted upon by certain things.
 
 \sayphaedrus Of course.
 
-\saysocrates Third, he will classify the kinds of speech and of
+\saysocrates Third\inouter{b}, he will classify the kinds of speech and of
 soul there are, as well as the various ways in which they are affected,
 and explain what causes each. He will then coordinate each kind of soul
 with the kind of speech appropriate to it. And he will give instructions
@@ -2377,7 +2374,7 @@ one kind of speech while another necessarily remains unconvinced.
 
 \saysocrates In fact, my friend, no speech will ever be a product of art,
 whether it is a model or one actually given, if it is delivered or
-written in any other way---on this or on any other subject. But
+written in any other way---on this or on any other\inouter{c} subject. But
 those who now write {\em Arts of Rhetoric}---we were just discussing
 them---are cunning people: they hide the fact that they know very well
 everything about the soul. Well, then, until they begin to speak and
@@ -2392,7 +2389,7 @@ willing to tell you.
 
 \sayphaedrus Please do.
 
-\saysocrates Since the nature of speech is in fact to direct the
+\saysocrates Since\inouter{d} the nature of speech is in fact to direct the
 soul, whoever intends to be a rhetorician must know how many kinds of
 soul there are. Their number is so-and-so many; each is of such-and-such
 a sort; hence some people have such-and-such a character and others have
@@ -2404,11 +2401,11 @@ particular reason, while people of such-and-such another sort are
 difficult to persuade for those particular reasons.
 
 The orator must learn all this well, then put his theory into practice
-and develop the ability to discern each kind clearly as it
+and develop the ability to discern\inouter{e} each kind clearly as it
 occurs in the actions of real life. Otherwise he won’t be any better off
 than he was when he was still listening to those discussions in school.
 He will now not only be able to say what kind of person is convinced by
-what kind of speech; on meeting someone he will be able
+what kind of speech; on meeting someone he will be able\inouter{272}
 to discern what he is like and make clear to himself that the person
 actually standing in front of him is of just this particular sort of
 character he had learned about in school---to that he must now apply
@@ -2420,7 +2417,7 @@ time is right for Speaking Concisely or Appealing to Pity or
 Exaggeration or for any other of the kinds of speech he has learned and
 when it is not---then, and only then, will he have finally mastered the
 art well and completely. But if his speaking, his teaching, or his
-writing lacks any one of these elements and he still claims to
+writing\inouter{b} lacks any one of these elements and he still claims to
 be speaking with art, you’ll be better off if you don’t believe him.
 
 “Well, Socrates and Phaedrus,” the author of this discourse might say,
@@ -2431,7 +2428,7 @@ terms?”
 rather a major undertaking.
 
 \saysocrates You’re right. And that’s why we must turn all our arguments
-every which way and try to find some easier and shorter route to the
+every which way and try to find some\inouter{c} easier and shorter route to the
 art: we don’t want to follow a long rough path for no good
 reason when we can choose a short smooth one instead.
 
@@ -2449,7 +2446,7 @@ who care about this topic?
 \saysocrates We do claim, after all, Phaedrus, that it is fair to give the
 wolf’s side of the story as well.
 
-\sayphaedrus That’s just what you should do.
+\sayphaedrus That’s\inouter{d} just what you should do.
 
 \saysocrates Well, these people say that there is no need to be so solemn
 about all this and stretch it out to such lengths. For the fact is, as
