--- a/projects/mc/rawcontent/phaedrussay.tex
+++ b/projects/mc/rawcontent/phaedrussay.tex
@@ -2456,13 +2456,13 @@ who intends to be an able rhetorician has no need to know the truth
 about the things that are just or good or yet about the people who are
 such either by nature or upbringing. No one in a lawcourt, you see,
 cares at all about the truth of such matters. They only care about what
-is convincing. This is called “the likely,” and that is what a
+is convincing.\inouter{e} This is called “the likely,” and that is what a
 man who intends to speak according to art should concentrate on.
 Sometimes, in fact, whether you are prosecuting or defending a case, you
 must not even say what actually happened, if it was not likely to have
 happened---you must say something that is likely instead. Whatever you
 say, you should pursue what is likely and leave the truth aside: the
-whole art consists in cleaving to that throughout your
+whole art consists in cleaving\inouter{273} to that throughout your
 speech.
 
 \sayphaedrus That’s an excellent presentation of what people say who
@@ -2471,7 +2471,7 @@ issue briefly earlier on, but it seems to be their single most important
 point.
 
 \saysocrates No doubt you’ve churned through Tisias’ book quite carefully.
-Then let Tisias tell us this also: By “the likely” does he mean anything
+Then let Tisias tell us this also\inouter{b}: By “the likely” does he mean anything
 but what is accepted by the crowd?
 
 \sayphaedrus What else?
@@ -2481,7 +2481,7 @@ artful technique that Tisias wrote that if a weak but spunky man is
 taken to court because he beat up a strong but cowardly one and stole
 his cloak or something else, neither one should tell the truth. The
 coward must say that the spunky man didn’t beat him up all by himself,
-while the latter must rebut this by saying that only the two of
+while the latter must rebut this by saying that only\inouter{c} the two of
 them were there, and fall back on that well-worn plea, “How could a man
 like me attack a man like him?” The strong man, naturally, will not
 admit his cowardice, but will try to invent some other lie, and may thus
@@ -2496,7 +2496,7 @@ himself\high{\goto{61}[phaedrus.htmlux5cux23phaedrfn_61]}---seems\high{\goto{62}
 to have discovered an art which he has disguised very well! But now, my
 friend, shall we or shall we not say to him---
 
-\sayphaedrus What?
+\sayphaedrus What?\inouter{d}
 
 \saysocrates This: “Tisias, some time ago, before you came into the
 picture, we were saying that people get the idea of what is likely
@@ -2506,7 +2506,7 @@ similarities. So, if you have something new to say about the art of
 speaking, we shall listen. But if you don’t, we shall remain convinced
 by the explanations we gave just before: No one will ever possess the
 art of speaking, to the extent that any human being can, unless
-he acquires the ability to enumerate the sorts of characters to be found
+he acquires\inouter{e} the ability to enumerate the sorts of characters to be found
 in any audience, to divide everything according to its kinds, and to
 grasp each single thing firmly by means of one form. And no one can
 acquire these abilities without great effort---a laborious effort a
@@ -2514,7 +2514,7 @@ sensible man will make not in order to speak and act among human beings,
 but so as to be able to speak and act in a way that pleases the gods as
 much as possible. Wiser people than ourselves, Tisias, say that a
 reasonable man must put his mind to being pleasant not to his fellow 
-slaves (though this may happen as a side effect) but to
+slaves (though this may happen as a side\inouter{274} effect) but to
 his masters, who are wholly good. So, if the way round is long, don’t be
 astonished: we must make this detour for the sake of things that are
 very important, not for what you have in mind. Still, as our argument
@@ -2524,7 +2524,7 @@ pursuing our own goal.
 \sayphaedrus What you’ve said is wonderful, Socrates---if only it could be
 done!
 
-\saysocrates Yet surely whatever one must go through on the way to
+\saysocrates Yet\inouter{b} surely whatever one must go through on the way to
 an honorable goal is itself honorable.
 
 \sayphaedrus Certainly.
@@ -2544,7 +2544,7 @@ words or discuss them in general?
 
 \sayphaedrus Not at all. Do you?
 
-\saysocrates I can tell you what I’ve heard the ancients said, though they 
+\saysocrates I\inouter{c} can tell you what I’ve heard the ancients said, though they 
 alone know the truth. However, if we could discover that
 ourselves, would we still care about the speculations of other people?
 
@@ -2559,7 +2559,7 @@ Greek mythology.} in Egypt
 there was one to whom the bird called the ibis is sacred. The name of
 that divinity was
 Theuth,\endnote{Theuth (or Thoth) is the
-Egyptian god of writing, measuring, and calculation. The Greeks
+Egyptian god of writing, measuring, and calculation.\inouter{d} The Greeks
 identified Thoth with Hermes, perhaps because of his role in weighing
 the soul. Thoth figures in a related story about the alphabet at
 {\em Philebus} 18b.} and it was he
@@ -2577,7 +2577,7 @@ Ammon.\endnote{Accepting the emendation
 of {\em Thamoun} at d4.} Theuth came to
 exhibit his arts to him and urged him to disseminate them to all the
 Egyptians. Thamus asked him about the usefulness of each art, and while
-Theuth was explaining it, Thamus praised him for whatever he
+Theuth\inouter{e} was explaining it, Thamus praised him for whatever he
 thought was right in his explanations and criticized him for whatever he
 thought was wrong.
 
@@ -2587,7 +2587,7 @@ writing, Theuth said: “O King, here is something that, once learned,
 will make the Egyptians wiser and will improve their memory; I have
 discovered a potion for memory and for wisdom.” Thamus, however,
 replied: “O most expert Theuth, one man can give birth to the elements
-of an art, but only another can judge how they can benefit or harm those
+of an art, but only another can judge how they can benefit\inouter{275} or harm those
 who will use them. And now, since you are the father of
 writing, your affection for it has made you describe its effects as the
 opposite of what they really are. In fact, it will introduce
@@ -2599,7 +2599,7 @@ You have not discovered a potion for remembering, but for reminding; you
 provide your students with the appearance of wisdom, not with its
 reality. Your invention will enable them to hear many things without
 being properly taught, and they will imagine that they have come
-to know much while for the most part they will know nothing. And they
+to know\inouter{b} much while for the most part they will know nothing. And they
 will be difficult to get along with, since they will merely appear to be
 wise instead of really being so.”
 
@@ -2610,7 +2610,7 @@ wherever else you want!
 say that the first prophecies were the words of an oak. Everyone who
 lived at that time, not being as wise as you young ones are today, found
 it rewarding enough in their simplicity to listen to an oak or even a
-stone, so long as it was telling the truth, while it seems to
+stone, so long as it was telling the truth,\inouter{c} while it seems to
 make a difference to you, Phaedrus, who is speaking and where he comes
 from. Why, though, don’t you just consider whether what he says is right
 or wrong?
@@ -2622,7 +2622,7 @@ was correct about writing.
 instructions for an art, as well as those who accept them, thinking that
 writing can yield results that are clear or certain, must be quite naive
 and truly ignorant of Ammon’s prophetic judgment: otherwise, how could
-they possibly think that words that have been written down can
+they possibly think that words that have been written\inouter{d} down can
 do more than remind those who already know what the writing is about?
 
 \sayphaedrus Quite right.
@@ -2633,7 +2633,7 @@ but if anyone asks them anything, they remain most solemnly silent. The
 same is true of written words. You’d think they were speaking as if they
 had some understanding, but if you question anything that has been said
 because you want to learn more, it continues to signify just that very
-same thing forever. When it has once been written down, every
+same thing forever. When it has once been written\inouter{e} down, every
 discourse roams about everywhere, reaching indiscriminately those with
 understanding no less than those who have no business with it, and it
 doesn’t know to whom it should speak and to whom it should not. And when
@@ -2643,7 +2643,7 @@ support.
 
 \sayphaedrus You are absolutely right about that, too.
 
-\saysocrates Now tell me, can we discern another kind of
+\saysocrates Now\inouter{276} tell me, can we discern another kind of
 discourse, a legitimate brother of this one? Can we say how it comes
 about, and how it is by nature better and more capable?
 
@@ -2656,7 +2656,7 @@ should speak and for whom it should remain silent.
 \sayphaedrus You mean the living, breathing discourse of the man who knows,
 of which the written one can be fairly called an image.
 
-\saysocrates Absolutely right. And tell me this. Would a sensible farmer, 
+\saysocrates Absolutely\inouter{b} right. And tell me this. Would a sensible farmer, 
 who cared about his seeds and wanted them to yield fruit, plant
 them in all seriousness in the gardens of Adonis in the middle of the
 summer and enjoy watching them bear fruit within seven days? Or would he
@@ -2667,7 +2667,7 @@ Adonis.} Wouldn’t he use
 his knowledge of farming to plant the seeds he cared for when it was
 appropriate and be content if they bore fruit seven months later?
 
-\sayphaedrus That’s how he would handle those he was serious about, 
+\sayphaedrus That’s\inouter{c} how he would handle those he was serious about, 
 Socrates, quite differently from the others, as you say.
 
 \saysocrates Now what about the man who knows what is just, noble, and
@@ -2682,7 +2682,7 @@ in their own defense as they are of teaching the truth adequately.
 
 \sayphaedrus That wouldn’t be likely.
 
-\saysocrates Certainly not. When he writes, it’s likely he will sow gardens 
+\saysocrates Certainly\inouter{d} not. When he writes, it’s likely he will sow gardens 
 of letters for the sake of amusing himself, storing up reminders
 for himself “when he reaches forgetful old age” and for everyone who
 wants to follow in his footsteps, and will enjoy seeing them sweetly
@@ -2691,7 +2691,7 @@ themselves with drinking parties and everything else that goes along
 with them, he will rather spend his time amusing himself with the things
 I have just described.
 
-\sayphaedrus Socrates, you are contrasting a vulgar amusement with the 
+\sayphaedrus Socrates\inouter{e}, you are contrasting a vulgar amusement with the 
 very noblest---with the amusement of a man who can while away
 his time telling stories of justice and the other matters you mentioned.
 
@@ -2699,7 +2699,7 @@ his time telling stories of justice and the other matters you mentioned.
 serious about these matters, and use the art of dialectic. The
 dialectician chooses a proper soul and plants and sows within it
 discourse accompanied by knowledge---discourse capable of helping itself
-as well as the man who planted it, which is not barren but produces a
+as well as the man who planted it, which is not barren\inouter{277} but produces a
 seed from which more discourse grows in the character of
 others. Such discourse makes the seed forever immortal and renders the
 man who has it as happy as any human being can be.
@@ -2712,7 +2712,7 @@ finally able to decide the issue.
 \sayphaedrus What issue is that?
 
 \saysocrates The issue which brought us to this point in the first place:
-We wanted to examine the attack made on Lysias on account of his writing speeches, and to ask which speeches are written artfully and
+We wanted to examine the attack made\inouter{b} on Lysias on account of his writing speeches, and to ask which speeches are written artfully and
 which not. Now, I think that we have answered that question clearly
 enough.
 
@@ -2723,7 +2723,7 @@ speaking or writing about; you must learn how to define each thing in
 itself; and, having defined it, you must know how to divide it into
 kinds until you reach something indivisible. Second, you must understand
 the nature of the soul, along the same lines; you must determine which
-kind of speech is appropriate to each kind of soul, prepare and
+kind of speech is appropriate to each kind of soul,\inouter{c} prepare and
 arrange your speech accordingly, and offer a complex and elaborate
 speech to a complex soul and a simple speech to a simple one. Then, and
 only then, will you be able to use speech artfully, to the extent that
@@ -2733,7 +2733,7 @@ making.
 
 \sayphaedrus Absolutely. That is exactly how it seemed to us.
 
-\saysocrates Now how about whether it’s noble or shameful to give
+\saysocrates Now\inouter{d} how about whether it’s noble or shameful to give
 or write a speech---when it could be fairly said to be grounds for
 reproach, and when not? Didn’t what we said just a little while ago make
 it clear---
@@ -2745,7 +2745,7 @@ write---privately or for the public, in the course of proposing some
 law---a political document which he believes to embody clear knowledge
 of lasting importance, then this writer deserves reproach, whether
 anyone says so or not. For to be unaware of the difference between a
-dream-image and the reality of what is just and unjust, good and
+dream-image and the reality of what is just and unjust, good\inouter{e} and
 bad, must truly be grounds for reproach even if the crowd praises it
 with one voice.
 
@@ -2755,7 +2755,7 @@ with one voice.
 discourse on any subject can only be a great amusement, that no
 discourse worth serious attention has ever been written in verse or
 prose, and that those that are recited in public without questioning and
-explanation, in the manner of the rhapsodes, are given
+explanation, in the manner of the rhapsodes\inouter{278}, are given
 only in order to produce conviction. He believes that at their very best
 these can only serve as reminders to those who already know. And he also
 thinks that only what is said for the sake of understanding and
@@ -2763,7 +2763,7 @@ learning, what is truly written in the soul concerning what is just,
 noble, and good can be clear, perfect, and worth serious attention: Such
 discourses should be called his own legitimate children, first the
 discourse he may have discovered already within himself and then
-its sons and brothers who may have grown naturally in other souls
+its sons and brothers who\inouter{b} may have grown naturally in other souls
 insofar as these are worthy; to the rest, he turns his back. Such a man,
 Phaedrus, would be just what you and I both would pray to become.
 
@@ -2772,13 +2772,13 @@ Phaedrus, would be just what you and I both would pray to become.
 \saysocrates Well, then: our playful amusement regarding discourse is
 complete. Now you go and tell Lysias that we came to the spring which is
 sacred to the Nymphs and heard words charging us to deliver a message
-to Lysias and anyone else who composes speeches, as well as to
+to Lysias and anyone else who\inouter{c} composes speeches, as well as to
 Homer and anyone else who has composed poetry either spoken or sung, and
 third, to Solon and anyone else who writes political documents that he
 calls laws: If any one of you has composed these things with a knowledge
 of the truth, if you can defend your writing when you are challenged,
 and if you can yourself make the argument that your writing is of little
-worth, then you must be called by a name derived not from these writings
+worth, then you must be called by a name\inouter{d} derived not from these writings
 but rather from those things that you are seriously pursuing.
 
 \sayphaedrus What name, then, would you give such a man?
@@ -2792,7 +2792,7 @@ something similar would fit him better and be more seemly.
 \saysocrates On the other hand, if a man has nothing more valuable than
 what he has composed or written, spending long hours twisting it around,
 pasting parts together and taking them apart---wouldn’t you be right to
-call him a poet or a speech writer or an author of laws?
+call him a poet or a speech writer or an author of laws?\inouter{e}
 
 \sayphaedrus Of course.
 
@@ -2809,7 +2809,7 @@ was an Athenian teacher and orator whose school was more famous in its
 day than Plato’s Academy.} What are
 you going to tell him, Socrates? What shall we say he is?
 
-\saysocrates Isocrates is still young, Phaedrus. But I want to tell you
+\saysocrates Isocrates\inouter{279} is still young, Phaedrus. But I want to tell you
 what I foresee for him.
 
 \sayphaedrus What is that?
@@ -2821,7 +2821,7 @@ continues writing speeches of the sort he is composing now, he makes
 everyone who has ever attempted to compose a speech seem like a child in
 comparison. Even more so if such work no longer satisfies him and a
 higher, divine impulse leads him to more important things. For nature,
-my friend, has placed the love of wisdom in his mind.
+my friend, has placed the love of wisdom in his mind.\inouter{b}
 
 That is the message I will carry to my beloved, Isocrates, from the gods
 of this place; and you have your own message for your Lysias.
@@ -2834,7 +2834,7 @@ a bit.
 \sayphaedrus Of course.
 
 \saysocrates O dear Pan and all the other gods of this place, grant that I
-may be beautiful inside. Let all my external possessions be in friendly 
+may be beautiful inside. Let\inouter{c} all my external possessions be in friendly 
 harmony with what is within. May I consider the wise man rich.
 As for gold, let me have as much as a moderate man
 could bear and carry with him.
